# faceDetectorGstream_withEdgeCases

./: .gitignore  CMakeLists.txt
scripts/: run_all.ps1  run_pipeline.bat  run_pipeline.sh
src/: face_detection.cpp  face_detection_advanced.cpp  main.cpp
submission/: README.txt
submission/part1/: run_pipeline.bat
submission/submission/: README.txt
submission/submission/part1/: run_pipeline.bat  run_pipeline.sh
submission/submission/part2/: BUILD_INSTRUCTIONS.txt
